2.2.1 dev
- Added a configuration for the backtrace, to limit the analysed
  steps.
- Change: Several performance tweaks for runtime optimization.
- Change: Fallback setting runtime => level set to 5.
- Change: Fallback setting runtime => maxCall set to 10.
- Change: Refactored the halfassed messaging implementation.
- Bugfix: Several tweaks to get a smaller HTML footprint.
- Bugfix: Prevent the debug methods from creating new analysis
  calls, resulting in an infinite loop.
- Bugfix: Better cleanup of HTML fragments left open from
  the hosting CMS.
- Bugfix: Reverted the 'Output -> File' change from 2.2.0
- Bugfix: Prevent a notice in case a property has a default value
  which is NULL.
- Bufix: Fixed a possible endless loop when iterating a traversable
  object.
- Bugfix: limit the preview of method analysis with a lot of
  parameters or long namespaces.
- Bugfix: Removed a notice, in case krexx was called from normal
  php and then again from a registered shutdown function.
- Bugfix: Removed the multiple escaping of inherited comments.
- Bugfix: Use the filepath filter in the method and function
  analysis
- Bugfix: Made use of the language file (nearly) everywhere.
- Bugfix: Make sure that there are no leftover chunks after a run.
- Bugfix: Prevent large output in case of arrays with more than 100
  items.
- Bugfix: Escaped info text about the maximum resting level.
- Bugfix: Missing leading backslash in classname display in several
  places.
- Bugfix: Code generation respects the scope analysis.
- Bugfix: The method analysis is now displayes the default parameter
  values correctly (or at all).

2.2.0
- Added more search pattern and source code parsing to the
  getter analysis.
- Added a metatag to both skins to prevent crawler from indexing
  a kreXX output. Remember kids: never debug a productive site.
  This will only lead to trouble.
- Added a Registry class, so the overwrites can actually access
  additional data from the outside.